Final submission, fixed tag misalign with resizing window problem

--- a/Project7/app/assets/stylesheets/photos.css
+++ b/Project7/app/assets/stylesheets/photos.css
@@ -68,7 +68,6 @@ ul.comments {
 }
 
 .photo_column {
-	width: 40%;
 	float:left;
 	position: relative;
 }
