--- a/Project7/app/assets/stylesheets/tags.css
+++ b/Project7/app/assets/stylesheets/tags.css
@@ -4,21 +4,15 @@
 	margin:0;
 	padding:0;
 	position: relative;
-	margin-left: auto;
-	margin-right: auto;
-	max-width: 100%;
-}
-
-#photo {
-	max-width: 100%;
 }
 
 #photo_for_tags_container {
 	position: relative;
 	margin-left: auto;
 	margin-right: auto;
-	width: 40%;
+	display: table;
 	line-height: 0px;
+	overflow:hidden;
 }
 
 #tag {
